--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 * {
 	color: #808080;
 }
@@ -17,26 +19,49 @@ h1 {
 }
 
 .play1Invisible {
-	visibility: hidden;
+	visibility: visible;
 }
 .play2Invisible {
 	visibility: hidden;	
 }
+
+table {
+	box-sizing: border-box;
+	-webkit-transition : border 500ms ease-out; 
+ 	-moz-transition : border 500ms ease-out;
+ 	-o-transition : border 500ms ease-out;
+ 	border: 3px solid rgba( 0, 255, 255, 1 );
+ 	
+}
+
+table:hover{
+   border : 3px solid red;   
+}
+
+
 #board {
+	box-sizing: border-box;
 	position: relative;
 }
 
+.score1, .score2{
+	text-align: center;
+}
+
 #tableScore p{
+	padding: 0px 18px 0px 20px;
 	color:black;
 	font-weight: bold;
-	width: 110px;
+	width: 135px;
+	font-size: 1.1em;
 }
 
 #tableScore{
 	position: absolute;
 	top: 70px;
 	left: 450px;
-
+	border-left: 2px dashed red;
+	border-right: 2px dashed red;
 }
 
 .square {
@@ -47,9 +72,12 @@ h1 {
 	text-align: center;
 	font-size: 70px;
 	opacity: 0.7;
+	color: black;
 }
 
+
 .newGame {
+	box-sizing: border-box;
 	margin-top: 20px;
 	width: 160px;
 	height: 30px;
@@ -62,28 +90,29 @@ h1 {
 
 .winnerOneInvisible {
 	visibility: hidden;
-	font-size: 1.3em;
+	font-size: 1.5em;
 }
 
 .winnerTwoInvisible {
 	visibility: hidden;
-	font-size: 1.3em;
+	font-size: 1.5em;
 }
 
 .winnerOne {
 	margin-left: 400px;
-	font-size: 2em;
+	font-size: 2.5em;
+	font-weight: bold;
 	color: red;
     display:none;
     width:100%;
     height:100%;
     position:absolute;
     top:100%;
-    z-index: 2;
 }
 .winnerTwo {
 	margin-left: 400px;
-	font-size: 2em;
+	font-size: 2.5em;
+	font-weight: bold;
 	color:red;
     display:none;
     width:100%;
